--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -136,11 +136,13 @@
     <ClCompile Include="DyvirFight.cpp" />
     <ClCompile Include="Fight.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dragonAzul.h" />
     <ClInclude Include="DyvirFight.h" />
     <ClInclude Include="Fight.h" />
+    <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
