--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -133,6 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Boss1.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Dragon.cpp" />
     <ClCompile Include="dragonAzul.cpp" />
@@ -141,11 +142,13 @@
     <ClCompile Include="Fight.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapWalls.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuFight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Boss1.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Dragon.h" />
     <ClInclude Include="dragonAzul.h" />
@@ -153,6 +156,7 @@
     <ClInclude Include="DyvirMap.h" />
     <ClInclude Include="Fight.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MapWalls.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuFight.h" />
   </ItemGroup>
