--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Dragon.cpp" />
     <ClCompile Include="dragonAzul.cpp" />
+    <ClCompile Include="DragonRojo.cpp" />
     <ClCompile Include="DyvirFight.cpp" />
     <ClCompile Include="DyvirMap.cpp" />
     <ClCompile Include="Fight.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Dragon.h" />
     <ClInclude Include="dragonAzul.h" />
+    <ClInclude Include="DragonRojo.h" />
     <ClInclude Include="DyvirFight.h" />
     <ClInclude Include="DyvirMap.h" />
     <ClInclude Include="Fight.h" />
