--- a/Proyectazo.vcxproj.filters
+++ b/Proyectazo.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="DragonRojo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AbilityMagic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DyvirFight.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DragonRojo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AbilityMagic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
