modificado el proyecto para incluir archivos de BrickTiles

--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="Ability.cpp" />
     <ClCompile Include="Boss1.cpp" />
+    <ClCompile Include="BrickTiles.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Dragon.cpp" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Ability.h" />
     <ClInclude Include="Boss1.h" />
+    <ClInclude Include="BrickTiles.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Dragon.h" />
