añadidas clases de habilidades

--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -141,6 +141,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ability.cpp" />
+    <ClCompile Include="AbilityFactory.cpp" />
+    <ClCompile Include="AbilityMagic.cpp" />
     <ClCompile Include="Boss1.cpp" />
     <ClCompile Include="BrickTiles.cpp" />
     <ClCompile Include="Collision.cpp" />
@@ -166,6 +168,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ability.h" />
+    <ClInclude Include="AbilityFactory.h" />
+    <ClInclude Include="AbilityMagic.h" />
     <ClInclude Include="Boss1.h" />
     <ClInclude Include="BrickTiles.h" />
     <ClInclude Include="Collision.h" />
