--- a/Proyectazo.vcxproj.filters
+++ b/Proyectazo.vcxproj.filters
@@ -80,6 +80,12 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Main Files</Filter>
     </ClCompile>
+    <ClCompile Include="AbilityMagic.cpp">
+      <Filter>Main Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AbilityFactory.cpp">
+      <Filter>Main Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MenuFight.h">
@@ -134,6 +140,10 @@
     <ClInclude Include="stdafx.h">
       <Filter>Main Files</Filter>
     </ClInclude>
+    <ClInclude Include="AbilityMagic.h">
+      <Filter>Main Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AbilityFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Proyectazo.rc">
