--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -148,11 +148,10 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Dragon.cpp" />
-    <ClCompile Include="dragonAzul.cpp" />
-    <ClCompile Include="DragonRojo.cpp" />
     <ClCompile Include="DyvirFight.cpp" />
     <ClCompile Include="DyvirMap.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyFactory.cpp" />
     <ClCompile Include="Fight.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -176,11 +175,10 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Dragon.h" />
-    <ClInclude Include="dragonAzul.h" />
-    <ClInclude Include="DragonRojo.h" />
     <ClInclude Include="DyvirFight.h" />
     <ClInclude Include="DyvirMap.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyFactory.h" />
     <ClInclude Include="Fight.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Map.h" />
