--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="MapWalls.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuFight.cpp" />
+    <ClCompile Include="MenuMap.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -183,6 +184,7 @@
     <ClInclude Include="MapWalls.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuFight.h" />
+    <ClInclude Include="MenuMap.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
