asumimos la desgracia

--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="EnemyFactory.h" />
     <ClInclude Include="Fight.h" />
     <ClInclude Include="FuncionesGlobales.h" />
+    <ClInclude Include="Elements.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MapWalls.h" />
