--- a/Proyectazo.vcxproj.filters
+++ b/Proyectazo.vcxproj.filters
@@ -1,150 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Fight Files">
-      <UniqueIdentifier>{f8d516f3-5892-4c9c-822f-9b580352cafb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fight Files\Menus">
-      <UniqueIdentifier>{6ff92f6b-7721-40e7-b986-fdd9290cb290}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fight Files\Enemies">
-      <UniqueIdentifier>{8b05d94d-5dfc-490f-956a-27baea4a89ef}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Dungeon Files">
-      <UniqueIdentifier>{4799d092-d859-4de4-af47-3b956cf5b367}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Dungeon Files\Enemies">
-      <UniqueIdentifier>{a3a72053-1d99-477c-a11a-1fca0357a7e7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Main Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
+    <ClCompile Include="Ability.cpp" />
+    <ClCompile Include="AbilityFactory.cpp" />
+    <ClCompile Include="BrickTiles.cpp" />
+    <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="Cursor.cpp" />
+    <ClCompile Include="Dragon.cpp" />
+    <ClCompile Include="DyvirFight.cpp" />
+    <ClCompile Include="DyvirMap.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyFactory.cpp" />
+    <ClCompile Include="Fight.cpp" />
+    <ClCompile Include="FuncionesGlobales.cpp" />
+    <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapWalls.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MenuFight.cpp" />
+    <ClCompile Include="MenuMap.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Menu.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Cursor.cpp">
-      <Filter>Fight Files\Menus</Filter>
-    </ClCompile>
-    <ClCompile Include="DyvirFight.cpp">
-      <Filter>Fight Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Dragon.cpp">
-      <Filter>Fight Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Fight.cpp">
-      <Filter>Fight Files</Filter>
-    </ClCompile>
-    <ClCompile Include="DyvirMap.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Map.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MapWalls.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Ability.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BrickTiles.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Inventory.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MenuFight.cpp">
-      <Filter>Fight Files\Menus</Filter>
-    </ClCompile>
-    <ClCompile Include="Collision.cpp">
-      <Filter>Dungeon Files</Filter>
-    </ClCompile>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-    <ClCompile Include="AbilityFactory.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyFactory.cpp">
-      <Filter>Main Files</Filter>
-    </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="MenuMap.cpp">
-=======
-    <ClCompile Include="FuncionesGlobales.cpp">
->>>>>>> AbilitySupport
-      <Filter>Main Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MenuFight.h">
-      <Filter>Fight Files\Menus</Filter>
-    </ClInclude>
-    <ClInclude Include="DyvirFight.h">
-      <Filter>Fight Files</Filter>
-    </ClInclude>
-    <ClInclude Include="DyvirMap.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Fight.h">
-      <Filter>Fight Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Ability.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Map.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MapWalls.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Inventory.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Cursor.h">
-      <Filter>Fight Files\Menus</Filter>
-    </ClInclude>
-    <ClInclude Include="BrickTiles.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Collision.h">
-      <Filter>Dungeon Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Dragon.h">
-      <Filter>Fight Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Menu.h">
-      <Filter>Main Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h" />
-    <ClInclude Include="stdafx.h">
-      <Filter>Main Files</Filter>
-    </ClInclude>
+    <ClInclude Include="Ability.h" />
     <ClInclude Include="AbilityFactory.h" />
+    <ClInclude Include="BrickTiles.h" />
+    <ClInclude Include="Collision.h" />
+    <ClInclude Include="Cursor.h" />
+    <ClInclude Include="Dragon.h" />
+    <ClInclude Include="DyvirFight.h" />
+    <ClInclude Include="DyvirMap.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyFactory.h" />
-<<<<<<< HEAD
-    <ClInclude Include="MenuMap.h" />
-=======
+    <ClInclude Include="Fight.h" />
     <ClInclude Include="FuncionesGlobales.h" />
     <ClInclude Include="Elements.h" />
->>>>>>> AbilitySupport
+    <ClInclude Include="Inventory.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="MapWalls.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuFight.h" />
+    <ClInclude Include="MenuMap.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Proyectazo.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
+    <ResourceCompile Include="Proyectazo.rc" />
   </ItemGroup>
 </Project>
