--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\SaveGame.cpp" />
     <ClCompile Include="src\Ability.cpp" />
     <ClCompile Include="src\AbilityFactory.cpp" />
     <ClCompile Include="src\BrickTiles.cpp" />
@@ -174,6 +175,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SaveGame.h" />
     <ClInclude Include="src\Ability.h" />
     <ClInclude Include="src\AbilityFactory.h" />
     <ClInclude Include="src\BrickTiles.h" />
