--- a/Proyectazo.vcxproj.filters
+++ b/Proyectazo.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="src\stdafx.cpp" />
     <ClCompile Include="src\Ability.cpp" />
     <ClCompile Include="src\AbilityFactory.cpp" />
+    <ClCompile Include="src\SaveGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BrickTiles.h" />
@@ -40,6 +41,7 @@
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\AbilityFactory.h" />
     <ClInclude Include="src\Ability.h" />
+    <ClInclude Include="src\SaveGame.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Proyectazo.rc" />
