hice cositas para que quede más prolijo el codigosx

--- a/Proyectazo.vcxproj
+++ b/Proyectazo.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\SaveGame.cpp" />
     <ClCompile Include="src\Ability.cpp" />
     <ClCompile Include="src\AbilityFactory.cpp" />
@@ -161,7 +162,6 @@
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\EnemyFactory.cpp" />
     <ClCompile Include="src\Fight.cpp" />
-    <ClCompile Include="src\Inventory.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\Menu.cpp" />
@@ -175,6 +175,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\SaveGame.h" />
     <ClInclude Include="src\Ability.h" />
     <ClInclude Include="src\AbilityFactory.h" />
@@ -188,7 +189,6 @@
     <ClInclude Include="src\EnemyFactory.h" />
     <ClInclude Include="src\Fight.h" />
     <ClInclude Include="src\GlobalEnums.h" />
-    <ClInclude Include="src\Inventory.h" />
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\MenuFight.h" />
